--- a/Miriteam_AEC_service/templates/chat/index.html
+++ b/Miriteam_AEC_service/templates/chat/index.html
@@ -1,20 +1,36 @@
-<div style="width: 1920px; height: 1080px; position: relative; background: white">
-    <img style="width: 2070px; height: 1080px; left: -75px; top: 0px; position: absolute" src="https://via.placeholder.com/2070x1080" />
-    <div style="width: 1000px; height: 1000px; left: 460px; top: 40px; position: absolute; background: rgba(255, 255, 255, 0.50); border-radius: 20px; border: 2px #FF4676 solid; backdrop-filter: blur(10px)"></div>
-    <div style="width: 940px; height: 76px; left: 490px; top: 934px; position: absolute; background: rgba(255, 255, 255, 0.50); border-radius: 15px; border: 2px #FF4676 solid"></div>
-    <div style="width: 32px; height: 32px; left: 1367px; top: 956px; position: absolute">
-      <div style="width: 25.33px; height: 21.33px; left: 4px; top: 5.33px; position: absolute; background: #FF4676"></div>
-    </div>
-    <img style="width: 157.47px; height: 17.67px; left: 533px; top: 963px; position: absolute" src="https://via.placeholder.com/157x18" />
-    <div style="width: 76px; height: 76px; left: 490px; top: 70px; position: absolute; background: rgba(255, 70, 118, 0.20); border-radius: 9999px; border: 2px #FF4676 solid"></div>
-    <div style="width: 42px; height: 42px; left: 507px; top: 87px; position: absolute">
-      <div style="width: 38.50px; height: 33.25px; left: 1.75px; top: 3.50px; position: absolute; background: #FF4676"></div>
-    </div>
-    <div style="width: 556px; height: 76px; left: 586px; top: 70px; position: absolute; background: rgba(255, 70, 118, 0.20); border-top-left-radius: 15px; border-top-right-radius: 15px; border-bottom-right-radius: 15px; border: 2px #FF4676 solid"></div>
-    <div style="width: 556px; height: 76px; left: 1334px; top: 166px; position: absolute; transform: rotate(180deg); transform-origin: 0 0; background: rgba(255, 255, 255, 0.50); border-top-left-radius: 15px; border-top-right-radius: 15px; border-bottom-right-radius: 15px; border: 2px #FF4676 solid"></div>
-    <div style="width: 76px; height: 76px; left: 1354px; top: 166px; position: absolute; background: rgba(255, 255, 255, 0.50); border-radius: 9999px; border: 2px #FF4676 solid"></div>
-    <div style="width: 42px; height: 42px; left: 1371px; top: 183px; position: absolute">
-      <div style="width: 35px; height: 35px; left: 3.50px; top: 3.50px; position: absolute; background: #FF4676"></div>
-    </div>
-    <img style="width: 160.21px; height: 17.69px; left: 618px; top: 98px; position: absolute" src="https://via.placeholder.com/160x18" />
+<div class=e1_2>
+  <div class="e1_3"></div>
+  <div class="e1_4"></div>
+  <div class="e1_5"></div>
+  <div class=e1_6>
+    <div class="e1_7"></div>
   </div>
+  <div class=e1_8><span  class="e1_9">Введите текст....</span></div>
+  <div class="e1_10"></div>
+  <div class=e1_11>
+    <div class="e1_12"></div>
+  </div>
+  <div class="e1_13"></div>
+  <div class="e1_14"></div>
+  <div class="e1_15"></div>
+  <div class=e1_16>
+    <div class="e1_17"></div>
+  </div>
+  <div class=e1_18><span  class="e1_19">Добрый день! Чем я могу Вам помочь?</span></div>
+  <div class="e1_20"></div>
+  <div class=e1_21>
+    <div class="e1_22"></div>
+  </div>
+  <div class="e1_23"></div>
+  <div class=e1_24><span  class="e1_25">Расскажи о мероприятиях ПИШа в ноябре</span></div><span  class="e1_26">Вот несколько мероприятий, которые проходят в ноябре в ПИШе:
+
+1. Конференция по инновациям в технологиях - Ноябрьская конференция, где представители ведущих компаний и эксперты делятся своим опытом и знаниями о последних тенденциях в инновационных технологиях.
+
+2. Фестиваль культуры и искусства - Международный фестиваль культуры и искусства, на котором представлены различные виды искусства, включая живопись, скульптуру, музыку и театральные постановки.
+
+3. Карьерная ярмарка - Мероприятие, на котором студенты и выпускники университетов могут встретиться с представителями различных компаний и узнать о возможностях трудоустройства и стажировок.
+
+4. Образовательный семинар - Семинар для преподавателей и ученых, где обсуждаются новые методы обучения и разработки учебных программ в области науки, технологий и инженерии.
+
+Пожалуйста, уточните, какой тип мероприятия вас интересует, и я смогу предоставить более конкретные сведения.  </span>
+</div>
